# github-ci-cd-setup

./: .coverage  README.md  pyproject.toml
.github/workflows/: dev_branch.yml  main_merge.yml  test.yml
my_project/: main.py  shapes.py
tests/: test_main.py  test_shapes.py
