[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "Practice Setting up CI/CD in Python"
authors = ["Joshua Andersland <joshua.andersland@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.3"
flake8 = "^6.1.0"
black = "^23.12.0"
bandit = "^1.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
